# eric

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
eric/: app.py  consumer.py  producer.py
k8s/: consumer.yaml  producer.yaml
k8s/kafka/: deployment.yaml  service.yaml
visit_aggregator/: __main__.py  agents.py  app.py  cli.py  config.py  main.py  models.py  web.py
