[tool.poetry]
name = "eric"
version = "0.1.0"
description = "Kafka x Python PoC"
authors = ["Daniel Middlecote <daniel@ometria.com>"]

[tool.poetry.dependencies]
python = "^3.8"
faust = {version = "^1.10.4", extras = ["redis"]}

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
